<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/logo"
                android:contentDescription="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btnLogout"
                android:textAllCaps="false"
                android:textColor="#F30202"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvSchedulePickup"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/schedule_pickup"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:id="@+id/btnscd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/btnscd"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvTrackPickup"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/track_pickup"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:id="@+id/tkpickup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/tkpickup"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvCapture"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/capture"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/captrewaste"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvSensor"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sensor"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/sensor"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvPaymentMethod"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/payment"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/pay"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/cvOtherService"
                android:layout_width="0dp"
                android:layout_height="@dimen/_125sdp"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                card_view:cardCornerRadius="@dimen/_8sdp"
                card_view:cardElevation="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_90sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/other_service"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/other"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>